<resources>
    <string name="app_name">Andrew\'s Tip Calculator</string>
    <string name="tip_input_label">Enter Amount:</string>
    <string name="total_label">Total ($):</string>
    <string name="tip_slider">Tip:</string>
    <string name="tip_percent_value">0%</string>
    <string name="tax_label">Tax:</string>
    <string name="on_off_tax">Tip Before Tax</string>
    <string name="people_slider">People:</string>
    <string name="people_value">1</string>
    <string name="on_off_people">Split Disabled</string>
    <string name="total_cost_label">Total Cost:</string>
    <string name="total_cost_value">$0.00</string>
</resources>